# pypi-test-source-project

./: pyproject.toml
src/package_hhl_test/: __init__.py  helper.py
src/package_hhl_test/sub_module/: another_helper.py
src/package_hhl_test/sub_package/: __init__.py
tests/: test_main.py
