[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "package_hhl_test"
version = "0.0.2"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package by hehailin"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]